src/hmdpsim/parser.output
Terminals unused in grammar

   ILLEGAL_TOKEN
   RSC_DIST_DISTRIBUTION
   RSC_DIST_DISCRETIZATION
   RSC_DIST_MEAN
   RSC_DIST_STDDEV


Rules useless in parser due to conflicts

  104 resource_decls: resource_decl_seq

  107 resource_decl_seq: resource_decl_seq resource_decl


State 120 conflicts: 1 reduce/reduce
State 164 conflicts: 2 reduce/reduce
State 424 conflicts: 1 reduce/reduce
State 470 conflicts: 1 shift/reduce
State 506 conflicts: 9 reduce/reduce
State 507 conflicts: 24 reduce/reduce


Grammar

    0 $accept: file $end

    1 $@1: /* empty */

    2 file: $@1 domains_and_problems

    3 domains_and_problems: /* empty */
    4                     | domains_and_problems domain_def
    5                     | domains_and_problems problem_def

    6 $@2: /* empty */

    7 domain_def: '(' define '(' domain name ')' $@2 domain_body ')'

    8 domain_body: /* empty */
    9            | require_def
   10            | require_def domain_body2
   11            | domain_body2

   12 domain_body2: types_def
   13             | types_def domain_body3
   14             | domain_body3

   15 domain_body3: constants_def
   16             | predicates_def
   17             | functions_def
   18             | resources_def
   19             | resources_def domain_body6
   20             | constants_def domain_body4
   21             | predicates_def domain_body5
   22             | functions_def resources_def domain_body6
   23             | functions_def domain_body6
   24             | structure_defs

   25 domain_body4: predicates_def
   26             | functions_def
   27             | resources_def
   28             | resources_def domain_body8
   29             | predicates_def domain_body7
   30             | functions_def resources_def domain_body8
   31             | functions_def domain_body8
   32             | structure_defs

   33 domain_body5: constants_def
   34             | functions_def
   35             | resources_def
   36             | resources_def domain_body9
   37             | constants_def domain_body7
   38             | functions_def resources_def domain_body9
   39             | functions_def domain_body9
   40             | structure_defs

   41 domain_body6: constants_def
   42             | predicates_def
   43             | constants_def domain_body8
   44             | predicates_def domain_body9
   45             | structure_defs

   46 domain_body7: functions_def
   47             | resources_def
   48             | resources_def structure_def
   49             | functions_def resources_def structure_defs
   50             | functions_def structure_defs
   51             | structure_defs

   52 domain_body8: predicates_def
   53             | predicates_def structure_defs
   54             | structure_defs

   55 domain_body9: constants_def
   56             | constants_def structure_defs
   57             | structure_defs

   58 structure_defs: structure_def
   59               | structure_defs structure_def

   60 structure_def: action_def

   61 require_def: '(' REQUIREMENTS require_keys ')'

   62 require_keys: require_key
   63             | require_keys require_key

   64 require_key: STRIPS
   65            | TYPING
   66            | NEGATIVE_PRECONDITIONS
   67            | DISJUNCTIVE_PRECONDITIONS
   68            | EQUALITY
   69            | EXISTENTIAL_PRECONDITIONS
   70            | UNIVERSAL_PRECONDITIONS
   71            | QUANTIFIED_PRECONDITIONS
   72            | CONDITIONAL_EFFECTS
   73            | FLUENTS
   74            | ADL
   75            | DURATIVE_ACTIONS
   76            | DURATION_INEQUALITIES
   77            | CONTINUOUS_EFFECTS
   78            | PROBABILISTIC_EFFECTS
   79            | REWARDS
   80            | MDP
   81            | HMDP

   82 $@3: /* empty */

   83 types_def: '(' TYPES $@3 typed_names ')'

   84 $@4: /* empty */

   85 constants_def: '(' CONSTANTS $@4 typed_names ')'

   86 predicates_def: '(' PREDICATES predicate_decls ')'

   87 $@5: /* empty */

   88 functions_def: '(' FUNCTIONS $@5 function_decls ')'

   89 resources_def: '(' RESOURCES resource_decls ')'

   90 predicate_decls: /* empty */
   91                | predicate_decls predicate_decl

   92 $@6: /* empty */

   93 predicate_decl: '(' predicate $@6 variables ')'

   94 function_decls: /* empty */
   95               | function_decl_seq
   96               | function_decl_seq function_type_spec function_decls

   97 function_decl_seq: function_decl
   98                  | function_decl_seq function_decl

   99 $@7: /* empty */

  100 function_type_spec: '-' $@7 function_type

  101 $@8: /* empty */

  102 function_decl: '(' function $@8 variables ')'

  103 resource_decls: /* empty */
  104               | resource_decl_seq
  105               | resource_decl_seq resource_decls

  106 resource_decl_seq: resource_decl
  107                  | resource_decl_seq resource_decl

  108 $@9: /* empty */

  109 resource_decl: '(' resource bound bound $@9 variables ')'

  110 $@10: /* empty */

  111 action_def: '(' ACTION name $@10 parameters action_body ')'

  112 parameters: /* empty */
  113           | PARAMETERS '(' variables ')'

  114 action_body: precondition action_body2
  115            | action_body2

  116 action_body2: /* empty */
  117             | effect

  118 precondition: PRECONDITION formula

  119 effect: EFFECT eff_formula

  120 eff_formula: p_effect
  121            | '(' and eff_formulas ')'

  122 $@11: /* empty */

  123 eff_formula: '(' forall $@11 '(' variables ')' eff_formula ')'

  124 $@12: /* empty */

  125 eff_formula: '(' when $@12 formula eff_formula ')'
  126            | '(' probabilistic prob_effs ')'

  127 eff_formulas: /* empty */
  128             | eff_formulas eff_formula

  129 prob_effs: probability eff_formula
  130          | prob_effs probability eff_formula

  131 probability: NUMBER

  132 p_effect: atomic_term_formula
  133         | '(' not atomic_term_formula ')'

  134 $@13: /* empty */

  135 p_effect: '(' assign_op $@13 f_head f_exp ')'

  136 assign_op: assign
  137          | scale_up
  138          | scale_down
  139          | increase
  140          | decrease
  141          | increase_probabilistic
  142          | decrease_probabilistic

  143 distribution_type: DIST_NORMAL
  144                  | DIST_UNIFORM

  145 discretization_type: DISCZ_POINTS
  146                    | DISCZ_THRESHOLD
  147                    | DISCZ_INTERVAL

  148 $@14: /* empty */

  149 problem_def: '(' define '(' problem name ')' '(' PDOMAIN name ')' $@14 problem_body ')'

  150 problem_body: require_def problem_body2
  151             | problem_body2

  152 problem_body2: object_decl problem_body3
  153              | problem_body3

  154 problem_body3: init goal_spec
  155              | goal_spec

  156 $@15: /* empty */

  157 object_decl: '(' OBJECTS $@15 typed_names ')'

  158 init: '(' INIT init_elements ')'

  159 init_elements: /* empty */
  160              | init_elements init_element

  161 init_element: atomic_name_formula
  162             | '(' '=' ground_f_head NUMBER ')'
  163             | '(' probabilistic prob_inits ')'
  164             | '(' ground_f_head distribution_exp ')'

  165 prob_inits: probability simple_init
  166           | prob_inits probability simple_init

  167 simple_init: one_init
  168            | '(' and one_inits ')'

  169 one_inits: /* empty */
  170          | one_inits one_init

  171 one_init: atomic_name_formula
  172         | '(' '=' ground_f_head value ')'

  173 value: NUMBER

  174 goal_spec: '(' GOAL name formula goal_reward ')'
  175          | '(' GOAL name formula goal_reward ')' goal_spec
  176          | metric_spec

  177 goal_reward: '(' GOAL_REWARD ground_f_exp ')' metric_spec
  178            | '(' GOAL_REWARD reward_formula ')'
  179            | '(' GOAL_LINEAR_REWARD reward_linear_formula ')'

  180 reward_formula: goal_reward_expr
  181               | '(' and reward_formulas ')'
  182               | '(' when formula reward_formula ')'

  183 reward_linear_formula: goal_linear_reward_expr
  184                      | '(' and linear_reward_formulas ')'
  185                      | '(' when formula reward_linear_formula ')'

  186 goal_reward_expr: ground_f_exp

  187 goal_linear_reward_expr: ground_f_exp goal_linear_reward_expr
  188                        | ground_f_exp

  189 reward_formulas: /* empty */
  190                | reward_formulas reward_formula

  191 linear_reward_formulas: /* empty */
  192                       | linear_reward_formulas '(' reward_linear_formula ')'

  193 metric_spec: /* empty */

  194 $@16: /* empty */

  195 metric_spec: '(' METRIC maximize $@16 ground_f_exp ')'

  196 $@17: /* empty */

  197 metric_spec: '(' METRIC minimize $@17 ground_f_exp ')'

  198 formula: atomic_term_formula

  199 $@18: /* empty */

  200 formula: '(' '=' term_or_f_exp $@18 term_or_f_exp ')'

  201 $@19: /* empty */

  202 formula: '(' binary_comp $@19 f_exp f_exp ')'
  203        | '(' not formula ')'
  204        | '(' and conjuncts ')'

  205 $@20: /* empty */

  206 formula: '(' or $@20 disjuncts ')'
  207        | '(' imply formula formula ')'

  208 $@21: /* empty */

  209 formula: '(' exists $@21 '(' variables ')' formula ')'

  210 $@22: /* empty */

  211 formula: '(' forall $@22 '(' variables ')' formula ')'

  212 conjuncts: /* empty */
  213          | conjuncts formula

  214 disjuncts: /* empty */
  215          | disjuncts formula

  216 $@23: /* empty */

  217 atomic_term_formula: '(' predicate $@23 terms ')'
  218                    | predicate

  219 $@24: /* empty */

  220 atomic_name_formula: '(' predicate $@24 names ')'
  221                    | predicate

  222 binary_comp: '<'
  223            | LE
  224            | GE
  225            | '>'

  226 f_exp: NUMBER
  227      | '(' '+' f_exp f_exp ')'
  228      | '(' '-' f_exp opt_f_exp ')'
  229      | '(' '*' f_exp f_exp ')'
  230      | '(' '/' f_exp f_exp ')'
  231      | distribution_exp
  232      | f_head

  233 distribution_exp: distribution_type f_head f_head discretization_type f_head f_head
  234                 | distribution_type NUMBER NUMBER discretization_type NUMBER NUMBER
  235                 | distribution_type f_head f_head
  236                 | distribution_type NUMBER NUMBER

  237 term_or_f_exp: NUMBER

  238 $@25: /* empty */

  239 term_or_f_exp: '(' '+' $@25 f_exp f_exp ')'

  240 $@26: /* empty */

  241 term_or_f_exp: '(' '-' $@26 f_exp opt_f_exp ')'

  242 $@27: /* empty */

  243 term_or_f_exp: '(' '*' $@27 f_exp f_exp ')'

  244 $@28: /* empty */

  245 term_or_f_exp: '(' '/' $@28 f_exp f_exp ')'

  246 $@29: /* empty */

  247 term_or_f_exp: '(' function $@29 terms ')'
  248              | name
  249              | variable

  250 opt_f_exp: /* empty */
  251          | f_exp

  252 $@30: /* empty */

  253 f_head: '(' function $@30 terms ')'
  254       | function

  255 ground_f_exp: NUMBER
  256             | '(' '+' ground_f_exp ground_f_exp ')'
  257             | '(' '-' ground_f_exp opt_ground_f_exp ')'
  258             | '(' '*' ground_f_exp ground_f_exp ')'
  259             | '(' '/' ground_f_exp ground_f_exp ')'
  260             | ground_f_head
  261             | GOAL_PROBABILITY

  262 opt_ground_f_exp: /* empty */
  263                 | ground_f_exp

  264 $@31: /* empty */

  265 ground_f_head: '(' function $@31 names ')'
  266              | function

  267 terms: /* empty */
  268      | terms name
  269      | terms variable

  270 names: /* empty */
  271      | names name

  272 variables: /* empty */
  273          | variable_seq

  274 $@32: /* empty */

  275 variables: variable_seq type_spec $@32 variables

  276 variable_seq: variable
  277             | variable_seq variable

  278 typed_names: /* empty */
  279            | name_seq

  280 $@33: /* empty */

  281 typed_names: name_seq type_spec $@33 typed_names

  282 name_seq: name
  283         | name_seq name

  284 $@34: /* empty */

  285 type_spec: '-' $@34 type

  286 type: object
  287     | type_name
  288     | '(' either types ')'

  289 types: object
  290      | type_name
  291      | types object
  292      | types type_name

  293 function_type: number

  294 define: DEFINE

  295 domain: DOMAIN_TOKEN

  296 problem: PROBLEM

  297 when: WHEN

  298 not: NOT

  299 and: AND

  300 or: OR

  301 imply: IMPLY

  302 exists: EXISTS

  303 forall: FORALL

  304 probabilistic: PROBABILISTIC

  305 assign: ASSIGN

  306 scale_up: SCALE_UP

  307 scale_down: SCALE_DOWN

  308 increase: INCREASE

  309 decrease: DECREASE

  310 increase_probabilistic: INCREASE_PROBABILISTIC

  311 decrease_probabilistic: DECREASE_PROBABILISTIC

  312 minimize: MINIMIZE

  313 maximize: MAXIMIZE

  314 number: NUMBER_TOKEN

  315 object: OBJECT_TOKEN

  316 either: EITHER

  317 type_name: DEFINE
  318          | DOMAIN_TOKEN
  319          | PROBLEM
  320          | EITHER
  321          | MINIMIZE
  322          | MAXIMIZE
  323          | NAME

  324 predicate: type_name
  325          | OBJECT_TOKEN
  326          | NUMBER_TOKEN

  327 function: name

  328 name: DEFINE
  329     | DOMAIN_TOKEN
  330     | PROBLEM
  331     | NUMBER_TOKEN
  332     | OBJECT_TOKEN
  333     | EITHER
  334     | WHEN
  335     | NOT
  336     | AND
  337     | OR
  338     | IMPLY
  339     | EXISTS
  340     | FORALL
  341     | PROBABILISTIC
  342     | ASSIGN
  343     | SCALE_UP
  344     | SCALE_DOWN
  345     | INCREASE
  346     | DECREASE
  347     | INCREASE_PROBABILISTIC DECREASE_PROBABILISTIC
  348     | MINIMIZE
  349     | MAXIMIZE
  350     | NAME

  351 variable: VARIABLE

  352 resource: name

  353 bound: NUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 61 83 85 86 88 89 93 102 109 111 113 121 123 125 126 133
    135 149 157 158 162 163 164 168 172 174 175 177 178 179 181 182
    184 185 192 195 197 200 202 203 204 206 207 209 211 217 220 227
    228 229 230 239 241 243 245 247 253 256 257 258 259 265 288
')' (41) 7 61 83 85 86 88 89 93 102 109 111 113 121 123 125 126 133
    135 149 157 158 162 163 164 168 172 174 175 177 178 179 181 182
    184 185 192 195 197 200 202 203 204 206 207 209 211 217 220 227
    228 229 230 239 241 243 245 247 253 256 257 258 259 265 288
'*' (42) 229 243 258
'+' (43) 227 239 256
'-' (45) 100 228 241 257 285
'/' (47) 230 245 259
'<' (60) 222
'=' (61) 162 172 200
'>' (62) 225
error (256)
DEFINE (258) 294 317 328
DOMAIN_TOKEN (259) 295 318 329
PROBLEM (260) 296 319 330
REQUIREMENTS (261) 61
TYPES (262) 83
CONSTANTS (263) 85
PREDICATES (264) 86
FUNCTIONS (265) 88
RESOURCES (266) 89
STRIPS (267) 64
TYPING (268) 65
NEGATIVE_PRECONDITIONS (269) 66
DISJUNCTIVE_PRECONDITIONS (270) 67
EQUALITY (271) 68
EXISTENTIAL_PRECONDITIONS (272) 69
UNIVERSAL_PRECONDITIONS (273) 70
QUANTIFIED_PRECONDITIONS (274) 71
CONDITIONAL_EFFECTS (275) 72
FLUENTS (276) 73
ADL (277) 74
DURATIVE_ACTIONS (278) 75
DURATION_INEQUALITIES (279) 76
CONTINUOUS_EFFECTS (280) 77
PROBABILISTIC_EFFECTS (281) 78
REWARDS (282) 79
MDP (283) 80
HMDP (284) 81
ACTION (285) 111
PARAMETERS (286) 113
PRECONDITION (287) 118
EFFECT (288) 119
PDOMAIN (289) 149
OBJECTS (290) 157
INIT (291) 158
GOAL (292) 174 175
GOAL_REWARD (293) 177 178
GOAL_LINEAR_REWARD (294) 179
METRIC (295) 195 197
GOAL_PROBABILITY (296) 261
WHEN (297) 297 334
NOT (298) 298 335
AND (299) 299 336
OR (300) 300 337
IMPLY (301) 301 338
EXISTS (302) 302 339
FORALL (303) 303 340
PROBABILISTIC (304) 304 341
ASSIGN (305) 305 342
SCALE_UP (306) 306 343
SCALE_DOWN (307) 307 344
INCREASE (308) 308 345
DECREASE (309) 309 346
MINIMIZE (310) 312 321 348
MAXIMIZE (311) 313 322 349
NUMBER_TOKEN (312) 314 326 331
OBJECT_TOKEN (313) 315 325 332
EITHER (314) 316 320 333
LE (315) 223
GE (316) 224
NAME (317) 323 350
VARIABLE (318) 351
NUMBER (319) 131 162 173 226 234 236 237 255 353
ILLEGAL_TOKEN (320)
RSC_DIST_DISTRIBUTION (321)
RSC_DIST_DISCRETIZATION (322)
RSC_DIST_MEAN (323)
RSC_DIST_STDDEV (324)
DISCZ_POINTS (325) 145
DISCZ_THRESHOLD (326) 146
DISCZ_INTERVAL (327) 147
DIST_NORMAL (328) 143
DIST_UNIFORM (329) 144
INCREASE_PROBABILISTIC (330) 310 347
DECREASE_PROBABILISTIC (331) 311 347


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
file (87)
    on left: 2, on right: 0
$@1 (88)
    on left: 1, on right: 2
domains_and_problems (89)
    on left: 3 4 5, on right: 2 4 5
domain_def (90)
    on left: 7, on right: 4
$@2 (91)
    on left: 6, on right: 7
domain_body (92)
    on left: 8 9 10 11, on right: 7
domain_body2 (93)
    on left: 12 13 14, on right: 10 11
domain_body3 (94)
    on left: 15 16 17 18 19 20 21 22 23 24, on right: 13 14
domain_body4 (95)
    on left: 25 26 27 28 29 30 31 32, on right: 20
domain_body5 (96)
    on left: 33 34 35 36 37 38 39 40, on right: 21
domain_body6 (97)
    on left: 41 42 43 44 45, on right: 19 22 23
domain_body7 (98)
    on left: 46 47 48 49 50 51, on right: 29 37
domain_body8 (99)
    on left: 52 53 54, on right: 28 30 31 43
domain_body9 (100)
    on left: 55 56 57, on right: 36 38 39 44
structure_defs (101)
    on left: 58 59, on right: 24 32 40 45 49 50 51 53 54 56 57 59
structure_def (102)
    on left: 60, on right: 48 58 59
require_def (103)
    on left: 61, on right: 9 10 150
require_keys (104)
    on left: 62 63, on right: 61 63
require_key (105)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81,
    on right: 62 63
types_def (106)
    on left: 83, on right: 12 13
$@3 (107)
    on left: 82, on right: 83
constants_def (108)
    on left: 85, on right: 15 20 33 37 41 43 55 56
$@4 (109)
    on left: 84, on right: 85
predicates_def (110)
    on left: 86, on right: 16 21 25 29 42 44 52 53
functions_def (111)
    on left: 88, on right: 17 22 23 26 30 31 34 38 39 46 49 50
$@5 (112)
    on left: 87, on right: 88
resources_def (113)
    on left: 89, on right: 18 19 22 27 28 30 35 36 38 47 48 49
predicate_decls (114)
    on left: 90 91, on right: 86 91
predicate_decl (115)
    on left: 93, on right: 91
$@6 (116)
    on left: 92, on right: 93
function_decls (117)
    on left: 94 95 96, on right: 88 96
function_decl_seq (118)
    on left: 97 98, on right: 95 96 98
function_type_spec (119)
    on left: 100, on right: 96
$@7 (120)
    on left: 99, on right: 100
function_decl (121)
    on left: 102, on right: 97 98
$@8 (122)
    on left: 101, on right: 102
resource_decls (123)
    on left: 103 104 105, on right: 89 105
resource_decl_seq (124)
    on left: 106 107, on right: 104 105 107
resource_decl (125)
    on left: 109, on right: 106 107
$@9 (126)
    on left: 108, on right: 109
action_def (127)
    on left: 111, on right: 60
$@10 (128)
    on left: 110, on right: 111
parameters (129)
    on left: 112 113, on right: 111
action_body (130)
    on left: 114 115, on right: 111
action_body2 (131)
    on left: 116 117, on right: 114 115
precondition (132)
    on left: 118, on right: 114
effect (133)
    on left: 119, on right: 117
eff_formula (134)
    on left: 120 121 123 125 126, on right: 119 123 125 128 129 130
$@11 (135)
    on left: 122, on right: 123
$@12 (136)
    on left: 124, on right: 125
eff_formulas (137)
    on left: 127 128, on right: 121 128
prob_effs (138)
    on left: 129 130, on right: 126 130
probability (139)
    on left: 131, on right: 129 130 165 166
p_effect (140)
    on left: 132 133 135, on right: 120
$@13 (141)
    on left: 134, on right: 135
assign_op (142)
    on left: 136 137 138 139 140 141 142, on right: 135
distribution_type (143)
    on left: 143 144, on right: 233 234 235 236
discretization_type (144)
    on left: 145 146 147, on right: 233 234
problem_def (145)
    on left: 149, on right: 5
$@14 (146)
    on left: 148, on right: 149
problem_body (147)
    on left: 150 151, on right: 149
problem_body2 (148)
    on left: 152 153, on right: 150 151
problem_body3 (149)
    on left: 154 155, on right: 152 153
object_decl (150)
    on left: 157, on right: 152
$@15 (151)
    on left: 156, on right: 157
init (152)
    on left: 158, on right: 154
init_elements (153)
    on left: 159 160, on right: 158 160
init_element (154)
    on left: 161 162 163 164, on right: 160
prob_inits (155)
    on left: 165 166, on right: 163 166
simple_init (156)
    on left: 167 168, on right: 165 166
one_inits (157)
    on left: 169 170, on right: 168 170
one_init (158)
    on left: 171 172, on right: 167 170
value (159)
    on left: 173, on right: 172
goal_spec (160)
    on left: 174 175 176, on right: 154 155 175
goal_reward (161)
    on left: 177 178 179, on right: 174 175
reward_formula (162)
    on left: 180 181 182, on right: 178 182 190
reward_linear_formula (163)
    on left: 183 184 185, on right: 179 185 192
goal_reward_expr (164)
    on left: 186, on right: 180
goal_linear_reward_expr (165)
    on left: 187 188, on right: 183 187
reward_formulas (166)
    on left: 189 190, on right: 181 190
linear_reward_formulas (167)
    on left: 191 192, on right: 184 192
metric_spec (168)
    on left: 193 195 197, on right: 176 177
$@16 (169)
    on left: 194, on right: 195
$@17 (170)
    on left: 196, on right: 197
formula (171)
    on left: 198 200 202 203 204 206 207 209 211, on right: 118 125
    174 175 182 185 203 207 209 211 213 215
$@18 (172)
    on left: 199, on right: 200
$@19 (173)
    on left: 201, on right: 202
$@20 (174)
    on left: 205, on right: 206
$@21 (175)
    on left: 208, on right: 209
$@22 (176)
    on left: 210, on right: 211
conjuncts (177)
    on left: 212 213, on right: 204 213
disjuncts (178)
    on left: 214 215, on right: 206 215
atomic_term_formula (179)
    on left: 217 218, on right: 132 133 198
$@23 (180)
    on left: 216, on right: 217
atomic_name_formula (181)
    on left: 220 221, on right: 161 171
$@24 (182)
    on left: 219, on right: 220
binary_comp (183)
    on left: 222 223 224 225, on right: 202
f_exp (184)
    on left: 226 227 228 229 230 231 232, on right: 135 202 227 228
    229 230 239 241 243 245 251
distribution_exp (185)
    on left: 233 234 235 236, on right: 164 231
term_or_f_exp (186)
    on left: 237 239 241 243 245 247 248 249, on right: 200
$@25 (187)
    on left: 238, on right: 239
$@26 (188)
    on left: 240, on right: 241
$@27 (189)
    on left: 242, on right: 243
$@28 (190)
    on left: 244, on right: 245
$@29 (191)
    on left: 246, on right: 247
opt_f_exp (192)
    on left: 250 251, on right: 228 241
f_head (193)
    on left: 253 254, on right: 135 232 233 235
$@30 (194)
    on left: 252, on right: 253
ground_f_exp (195)
    on left: 255 256 257 258 259 260 261, on right: 177 186 187 188
    195 197 256 257 258 259 263
opt_ground_f_exp (196)
    on left: 262 263, on right: 257
ground_f_head (197)
    on left: 265 266, on right: 162 164 172 260
$@31 (198)
    on left: 264, on right: 265
terms (199)
    on left: 267 268 269, on right: 217 247 253 268 269
names (200)
    on left: 270 271, on right: 220 265 271
variables (201)
    on left: 272 273 275, on right: 93 102 109 113 123 209 211 275
$@32 (202)
    on left: 274, on right: 275
variable_seq (203)
    on left: 276 277, on right: 273 275 277
typed_names (204)
    on left: 278 279 281, on right: 83 85 157 281
$@33 (205)
    on left: 280, on right: 281
name_seq (206)
    on left: 282 283, on right: 279 281 283
type_spec (207)
    on left: 285, on right: 275 281
$@34 (208)
    on left: 284, on right: 285
type (209)
    on left: 286 287 288, on right: 285
types (210)
    on left: 289 290 291 292, on right: 288 291 292
function_type (211)
    on left: 293, on right: 100
define (212)
    on left: 294, on right: 7 149
domain (213)
    on left: 295, on right: 7
problem (214)
    on left: 296, on right: 149
when (215)
    on left: 297, on right: 125 182 185
not (216)
    on left: 298, on right: 133 203
and (217)
    on left: 299, on right: 121 168 181 184 204
or (218)
    on left: 300, on right: 206
imply (219)
    on left: 301, on right: 207
exists (220)
    on left: 302, on right: 209
forall (221)
    on left: 303, on right: 123 211
probabilistic (222)
    on left: 304, on right: 126 163
assign (223)
    on left: 305, on right: 136
scale_up (224)
    on left: 306, on right: 137
scale_down (225)
    on left: 307, on right: 138
increase (226)
    on left: 308, on right: 139
decrease (227)
    on left: 309, on right: 140
increase_probabilistic (228)
    on left: 310, on right: 141
decrease_probabilistic (229)
    on left: 311, on right: 142
minimize (230)
    on left: 312, on right: 197
maximize (231)
    on left: 313, on right: 195
number (232)
    on left: 314, on right: 293
object (233)
    on left: 315, on right: 286 289 291
either (234)
    on left: 316, on right: 288
type_name (235)
    on left: 317 318 319 320 321 322 323, on right: 287 290 292 324
predicate (236)
    on left: 324 325 326, on right: 93 217 218 220 221
function (237)
    on left: 327, on right: 102 247 253 254 265 266
name (238)
    on left: 328 329 330 331 332 333 334 335 336 337 338 339 340 341
    342 343 344 345 346 347 348 349 350, on right: 7 111 149 174 175
    248 268 271 282 283 327 352
variable (239)
    on left: 351, on right: 249 269 276 277
resource (240)
    on left: 352, on right: 109
bound (241)
    on left: 353, on right: 109


State 0

    0 $accept: . file $end

    $default  reduce using rule 1 ($@1)

    file  go to state 1
    $@1   go to state 2


State 1

    0 $accept: file . $end

    $end  shift, and go to state 3


State 2

    2 file: $@1 . domains_and_problems

    $default  reduce using rule 3 (domains_and_problems)

    domains_and_problems  go to state 4


State 3

    0 $accept: file $end .

    $default  accept


State 4

    2 file: $@1 domains_and_problems .
    4 domains_and_problems: domains_and_problems . domain_def
    5                     | domains_and_problems . problem_def

    '('  shift, and go to state 5

    $default  reduce using rule 2 (file)

    domain_def   go to state 6
    problem_def  go to state 7


State 5

    7 domain_def: '(' . define '(' domain name ')' $@2 domain_body ')'
  149 problem_def: '(' . define '(' problem name ')' '(' PDOMAIN name ')' $@14 problem_body ')'

    DEFINE  shift, and go to state 8

    define  go to state 9


State 6

    4 domains_and_problems: domains_and_problems domain_def .

    $default  reduce using rule 4 (domains_and_problems)


State 7

    5 domains_and_problems: domains_and_problems problem_def .

    $default  reduce using rule 5 (domains_and_problems)


State 8

  294 define: DEFINE .

    $default  reduce using rule 294 (define)


State 9

    7 domain_def: '(' define . '(' domain name ')' $@2 domain_body ')'
  149 problem_def: '(' define . '(' problem name ')' '(' PDOMAIN name ')' $@14 problem_body ')'

    '('  shift, and go to state 10


State 10

    7 domain_def: '(' define '(' . domain name ')' $@2 domain_body ')'
  149 problem_def: '(' define '(' . problem name ')' '(' PDOMAIN name ')' $@14 problem_body ')'

    DOMAIN_TOKEN  shift, and go to state 11
    PROBLEM       shift, and go to state 12

    domain   go to state 13
    problem  go to state 14


State 11

  295 domain: DOMAIN_TOKEN .

    $default  reduce using rule 295 (domain)


State 12

  296 problem: PROBLEM .

    $default  reduce using rule 296 (problem)


State 13

    7 domain_def: '(' define '(' domain . name ')' $@2 domain_body ')'

    DEFINE                  shift, and go to state 15
    DOMAIN_TOKEN            shift, and go to state 16
    PROBLEM                 shift, and go to state 17
    WHEN                    shift, and go to state 18
    NOT                     shift, and go to state 19
    AND                     shift, and go to state 20
    OR                      shift, and go to state 21
    IMPLY                   shift, and go to state 22
    EXISTS                  shift, and go to state 23
    FORALL                  shift, and go to state 24
    PROBABILISTIC           shift, and go to state 25
    ASSIGN                  shift, and go to state 26
    SCALE_UP                shift, and go to state 27
    SCALE_DOWN              shift, and go to state 28
    INCREASE                shift, and go to state 29
    DECREASE                shift, and go to state 30
    MINIMIZE                shift, and go to state 31
    MAXIMIZE                shift, and go to state 32
    NUMBER_TOKEN            shift, and go to state 33
    OBJECT_TOKEN            shift, and go to state 34
    EITHER                  shift, and go to state 35
    NAME                    shift, and go to state 36
    INCREASE_PROBABILISTIC  shift, and go to state 37

    name  go to state 38


State 14

  149 problem_def: '(' define '(' problem . name ')' '(' PDOMAIN name ')' $@14 problem_body ')'

    DEFINE                  shift, and go to state 15
    DOMAIN_TOKEN            shift, and go to state 16
    PROBLEM                 shift, and go to state 17
    WHEN                    shift, and go to state 18
    NOT                     shift, and go to state 19
    AND                     shift, and go to state 20
    OR                      shift, and go to state 21
    IMPLY                   shift, and go to state 22
    EXISTS                  shift, and go to state 23
    FORALL                  shift, and go to state 24
    PROBABILISTIC           shift, and go to state 25
    ASSIGN                  shift, and go to state 26
    SCALE_UP                shift, and go to state 27
    SCALE_DOWN              shift, and go to state 28
    INCREASE                shift, and go to state 29
    DECREASE                shift, and go to state 30
    MINIMIZE                shift, and go to state 31
    MAXIMIZE                shift, and go to state 32
    NUMBER_TOKEN            shift, and go to state 33
    OBJECT_TOKEN            shift, and go to state 34
    EITHER                  shift, and go to state 35
    NAME                    shift, and go to state 36
    INCREASE_PROBABILISTIC  shift, and go to state 37

    name  go to state 39


State 15

  328 name: DEFINE .

    $default  reduce using rule 328 (name)


State 16

  329 name: DOMAIN_TOKEN .

    $default  reduce using rule 329 (name)


State 17

  330 name: PROBLEM .

    $default  reduce using rule 330 (name)


State 18

  334 name: WHEN .

    $default  reduce using rule 334 (name)


State 19

  335 name: NOT .

    $default  reduce using rule 335 (name)


State 20

  336 name: AND .

    $default  reduce using rule 336 (name)


State 21

  337 name: OR .

    $default  reduce using rule 337 (name)


State 22

  338 name: IMPLY .

    $default  reduce using rule 338 (name)


State 23

  339 name: EXISTS .

    $default  reduce using rule 339 (name)


State 24

  340 name: FORALL .

    $default  reduce using rule 340 (name)


State 25

  341 name: PROBABILISTIC .

    $default  reduce using rule 341 (name)


State 26

  342 name: ASSIGN .

    $default  reduce using rule 342 (name)


State 27

  343 name: SCALE_UP .

    $default  reduce using rule 343 (name)


State 28

  344 name: SCALE_DOWN .

    $default  reduce using rule 344 (name)


State 29

  345 name: INCREASE .

    $default  reduce using rule 345 (name)


State 30

  346 name: DECREASE .

    $default  reduce using rule 346 (name)


State 31

  348 name: MINIMIZE .

    $default  reduce using rule 348 (name)


State 32

  349 name: MAXIMIZE .

    $default  reduce using rule 349 (name)


State 33

  331 name: NUMBER_TOKEN .

    $default  reduce using rule 331 (name)


State 34

  332 name: OBJECT_TOKEN .

    $default  reduce using rule 332 (name)


State 35

  333 name: EITHER .

    $default  reduce using rule 333 (name)


State 36

  350 name: NAME .

    $default  reduce using rule 350 (name)


State 37

  347 name: INCREASE_PROBABILISTIC . DECREASE_PROBABILISTIC

    DECREASE_PROBABILISTIC  shift, and go to state 40


State 38

    7 domain_def: '(' define '(' domain name . ')' $@2 domain_body ')'

    ')'  shift, and go to state 41


State 39

  149 problem_def: '(' define '(' problem name . ')' '(' PDOMAIN name ')' $@14 problem_body ')'

    ')'  shift, and go to state 42


State 40

  347 name: INCREASE_PROBABILISTIC DECREASE_PROBABILISTIC .

    $default  reduce using rule 347 (name)


State 41

    7 domain_def: '(' define '(' domain name ')' . $@2 domain_body ')'

    $default  reduce using rule 6 ($@2)

    $@2  go to state 43


State 42

  149 problem_def: '(' define '(' problem name ')' . '(' PDOMAIN name ')' $@14 problem_body ')'

    '('  shift, and go to state 44


State 43

    7 domain_def: '(' define '(' domain name ')' $@2 . domain_body ')'

    '('  shift, and go to state 45

    $default  reduce using rule 8 (domain_body)
